--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "koa-logger": "^3.2.1",
     "koa-router": "^8.0.8",
     "mongoose": "^5.9.16",
+    "mongoose-paginate": "^5.0.3",
     "yenv": "^2.1.1"
   },
   "devDependencies": {
