--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "cross-env NODE_ENV=development nodemon ./src/server.js",
     "lint:show": "eslint src/ -f stylish",
     "lint:fix": "eslint --fix --ext .js .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "cross-env NODE_ENV=development jest --watchAll"
   },
   "keywords": [],
   "author": "",
@@ -24,6 +24,7 @@
     "yenv": "^2.1.1"
   },
   "devDependencies": {
+    "@types/jest": "^25.2.3",
     "eslint": "^7.1.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-config-standard": "^14.1.1",
@@ -32,7 +33,10 @@
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
+    "jest": "^26.0.1",
     "nodemon": "^2.0.4",
-    "prettier": "^2.0.5"
+    "prettier": "^2.0.5",
+    "supertest": "^4.0.2",
+    "ts-jest": "^26.1.0"
   }
 }
